--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -1,15 +1,12 @@
 <div class="row">
-    <div class="col-md-3">
-        <span class="hipster img-fluid rounded"></span>
-    </div>
-    <div class="col-md-9">
-        <h1 class="display-4">Welcome, Java Hipster!</h1>
-        <p class="lead">This is your homepage</p>
+    <div class="col-md-12">
+        <h1 class="display-4">Welcome</h1>
+        <p class="lead">Search Trainings</p>
 
         <div [ngSwitch]="isAuthenticated()">
             <div class="alert alert-success" *ngSwitchCase="true">
                 <span id="home-logged-message" *ngIf="account"
-                   > You are logged in as user "{{account.login}}". </span>
+                > You are logged in as user "{{account.login}}". </span>
             </div>
 
             <div class="alert alert-warning" *ngSwitchCase="false">
@@ -22,20 +19,54 @@
             </div>
         </div>
 
-        <p>
-            If you have any question on JHipster:
-        </p>
-
-        <ul>
-            <li><a href="https://www.jhipster.tech/" target="_blank" rel="noopener noreferrer">JHipster homepage</a></li>
-            <li><a href="http://stackoverflow.com/tags/jhipster/info" target="_blank" rel="noopener noreferrer">JHipster on Stack Overflow</a></li>
-            <li><a href="https://github.com/jhipster/generator-jhipster/issues?state=open" target="_blank" rel="noopener noreferrer">JHipster bug tracker</a></li>
-            <li><a href="https://gitter.im/jhipster/generator-jhipster" target="_blank" rel="noopener noreferrer">JHipster public chat room</a></li>
-            <li><a href="https://twitter.com/java_hipster" target="_blank" rel="noopener noreferrer">follow @java_hipster on Twitter</a></li>
-        </ul>
-
-        <p>
-            <span>If you like JHipster, don't forget to give us a star on</span> <a href="https://github.com/jhipster/generator-jhipster" target="_blank" rel="noopener noreferrer">GitHub</a>!
-        </p>
-    </div>
+        <div class="input-group col-md-6">
+            <div class="input-group-btn">
+                <select class="form-control" (change)="setSelection($event.target.value)">
+                    <option *ngFor="let option of skillList" [value]="option.id">
+                        {{option.name}}
+                    </option>
+                </select>
+            </div>
+            <div class="input-group-append">
+                <button (click)= "search()"> search</button>
+            </div>
+        </div>
+            <div class="table-responsive" class="col-md-12">
+                <table class="table table-striped" *ngIf="mentorSkills?.length > 0">
+                    <thead>
+                        <tr>
+                            <th><span>Name</span></th>
+                            <th><span>years of experience</span></th>
+                            <th><span>no. of trainings delivered</span></th>
+                            <th><span>Fee charged</span></th>
+                            <th><span>Date.</span></th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let skill of mentorSkills;">
+                            <td>{{skill.name}}</td>
+                            <td>{{skill.yearsOfExp}}</td>
+                            <td>{{skill.trainingsDelivered}}</td>
+                            <td>{{skill.fee}}</td>
+                            <select class="form-control" #calendarSelected>
+                                <option *ngFor="let calendar of skill.mentorCalendarList" [value]="calendar.startDatetime + '-' +calendar.endDatetime" >
+                                    {{calendar.startDatetime | date:'MM-dd HH:mm'}}
+                                </option>
+                            </select>
+                            <td class="text-right">
+                                <div class="btn-group" *ngIf="isAuthenticated()">
+                                    <button type="submit"
+                                            (click)="sendProposal(skill.id,skill.mentorId, calendarSelected)"
+                                            class="btn btn-info btn-sm">
+                                        <fa-icon [icon]="'pencil-alt'"></fa-icon>
+                                        <span class="d-none d-md-inline" jhiTranslate="entity.action.view">Proposal</span>
+                                    </button>
+                                </div>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
 </div>
